cmake_minimum_required(VERSION 3.15)
project(external-hdf5)

if(INIT_CACHE_FILE)
    set(INIT_CACHE_ARG -C${INIT_CACHE_FILE})
endif()

include(GNUInstallDirs)
include(ExternalProject)

option(HDF5_ENABLE_PARALLEL         "" OFF)
option(HDF5_ENABLE_Z_LIB_SUPPORT    "" ON)
option(HDF5_ENABLE_SZIP_SUPPORT     "" ON)
option(HDF5_ENABLE_SZIP_ENCODING    "" ON)
option(HDF5_BUILD_HL_LIB            "" ON)
option(HDF5_BUILD_CPP_LIB           "" OFF)
option(HDF5_ENABLE_SZIP_SUPPORT     "" OFF)
option(HDF5_ENABLE_SZIP_SUPPORT     "" OFF)
option(HDF5_BUILD_FORTRAN           "" OFF)
option(HDF5_BUILD_JAVA              "" OFF)

set(ZLIB_ROOT    ${CMAKE_INSTALL_PREFIX} CACHE STRING "")
set(SZIP_ROOT    ${CMAKE_INSTALL_PREFIX} CACHE STRING "")
set(LIBAEC_ROOT  ${CMAKE_INSTALL_PREFIX} CACHE STRING "")

if (HDF5_ENABLE_PARALLEL AND NOT WIN32)
    find_package(MPI COMPONENTS C CXX REQUIRED)
endif ()

if(HDF5_ENABLE_Z_LIB_SUPPORT)
    find_package(ZLIB COMPONENTS static shared NAMES zlib REQUIRED)
endif()
if(HDF5_ENABLE_SZIP_SUPPORT)
    find_package(SZIP COMPONENTS static shared NAMES libaec REQUIRED)
endif()

ExternalProject_Add(external_hdf5
        URL         https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.1/src/CMake-hdf5-1.12.1.tar.gz
        URL_MD5     2191996e136130c57b3508796ce32c2a
        PREFIX      ${CMAKE_BINARY_DIR}
        INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
        PATCH_COMMAND patch -p1 -t -N < ${CMAKE_CURRENT_LIST_DIR}/hdf5-1.12.1.patch
        BUILD_ALWAYS TRUE
        SOURCE_SUBDIR hdf5-1.12.1
#        DEPENDS ${hdf5_depends}
        LIST_SEPARATOR |
        CMAKE_ARGS
        ${INIT_CACHE_ARG}
        -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
        -DCMAKE_INSTALL_RPATH:PATH=<INSTALL_DIR>/${CMAKE_INSTALL_LIBDIR}
        -DCMAKE_SKIP_BUILD_RPATH:BOOL=OFF
        -DCMAKE_BUILD_WITH_INSTALL_RPATH:BOOL=OFF
        -DCMAKE_INSTALL_RPATH_USE_LINK_PATH:BOOL=ON
        -DCMAKE_INSTALL_MESSAGE=LAZY
        # HDF5 flags
        -DBUILD_TESTING:BOOL=OFF
        -DHDF_PACKAGE_NAMESPACE:STRING=hdf5::
        -DHDF5_ALLOW_EXTERNAL_SUPPORT:STRING=NO
        -DHDF5_PACKAGE_EXTLIBS:BOOL=ON # So that hdf5-config.cmake includes zlib-config.cmake and libaec-config.cmake. See also the patch above
        -DHDF5_ENABLE_PARALLEL:BOOL=${HDF5_ENABLE_PARALLEL}
        -DHDF5_ENABLE_COVERAGE:BOOL=OFF
        -DHDF5_ENABLE_TRACE:BOOL=OFF
        -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=${HDF5_ENABLE_Z_LIB_SUPPORT}
        -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=${HDF5_ENABLE_SZIP_SUPPORT}
        -DHDF5_ENABLE_SZIP_ENCODING:BOOL=${HDF5_ENABLE_SZIP_ENCODING}
        -DZLIB_ROOT:PATH=${ZLIB_ROOT}
        -DSZIP_ROOT:PATH=${SZIP_ROOT}
        -DLIBAEC_ROOT:PATH=${LIBAEC_ROOT}
        -DZLIB_INCLUDE_DIR:PATH=${ZLIB_ROOT}/${CMAKE_INSTALL_INCLUDEDIR}
        -DSZIP_INCLUDE_DIR:PATH=${SZIP_ROOT}/${CMAKE_INSTALL_INCLUDEDIR} # Fixes bug when using libaec
        -DZLIB_STATIC_LIBRARY:STRING=zlib-static # Technically not needed -- it is defined by zlib-config.cmake
        -DSZIP_STATIC_LIBRARY:STRING=sz-static # This one is needed because we use libaec (which defines sz-static)
        -DZLIB_PACKAGE_NAME:STRING=zlib
        -DSZIP_PACKAGE_NAME:STRING=libaec
        -DLIBAEC_PACKAGE_NAME:STRING=libaec
        -DSZ_PACKAGE_NAME:STRING=libaec
        -DUSE_LIBAEC:BOOL=ON
        -DZLIB_USE_EXTERNAL:BOOL=OFF
        -DSZIP_USE_EXTERNAL:BOOL=OFF
        -DLIBAEC_USE_EXTERNAL:BOOL=OFF
        -DHDF5_BUILD_TOOLS:BOOL=${HDF5_BUILD_TOOLS}
        -DHDF5_BUILD_HL_LIB:BOOL=${HDF5_BUILD_HL_LIB}
        -DHDF5_BUILD_CPP_LIB:BOOL=${HDF5_BUILD_CPP_LIB}
        -DHDF5_BUILD_FORTRAN:BOOL=${HDF5_BUILD_FORTRAN}
        -DHDF5_BUILD_JAVA:BOOL=${HDF5_BUILD_JAVA}
        -DHDF5_BUILD_EXAMPLES:BOOL=OFF
        -DHDF5_DISABLE_COMPILER_WARNINGS:BOOL=ON
        -DALLOW_UNSUPPORTED=ON
#        --loglevel=DEBUG
        )

