cmake_minimum_required(VERSION 3.12)
project(test-simpleWrite)
add_executable(${PROJECT_NAME} simpleWrite.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE h5pp)
add_test(NAME ${PROJECT_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${PROJECT_NAME})
if (MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/ignore:4099")
endif ()