cmake_minimum_required(VERSION 3.10)
project(helloworld)
add_executable(${PROJECT_NAME} helloworld.cpp)
find_package(h5pp PATHS ${H5PP_ROOT_DIR} REQUIRED)
if (h5pp_FOUND)
    target_link_libraries(${PROJECT_NAME} PRIVATE h5pp::h5pp h5pp::deps )
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
endif()