cmake_minimum_required(VERSION 3.10)
project(writescalar)
add_executable(${PROJECT_NAME} writescalar.cpp)
target_compile_options(${PROJECT_NAME} PRIVATE -Wpedantic -Wextra -O0)
message("H5PP_INSTALL_DIR ${H5PP_INSTALL_DIR}")
find_package(h5pp PATHS ${H5PP_INSTALL_DIR} REQUIRED)
if (h5pp_FOUND)
    get_target_property(EIGEN_INFO h5pp::Eigen3      INTERFACE_INCLUDE_DIRECTORIES)
    get_target_property(SPDLOG_INFO h5pp::spdlog     INTERFACE_INCLUDE_DIRECTORIES)
    get_target_property(HDF5_INFO h5pp::hdf5         INTERFACE_LINK_LIBRARIES)
    message("=============================================================================")
    message("===            SUMMARY OF DEPENDENCIES FOUND BY HELLOWORLD                ===")
    message("=============================================================================")
    message("    EIGEN3   :   ${EIGEN_INFO}")
    message("    SPDLOG   :   ${SPDLOG_INFO}")
    message("    HDF5     :   ${HDF5_INFO}")
    message("=============================================================================")
    message("")

    target_link_libraries(${PROJECT_NAME} PRIVATE h5pp::h5pp h5pp::deps )
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

endif()
